[package]
name = "RustQuest"
version = "0.1.0"
edition = "2024"
description = "My new Rust project"
license = "MIT"
authors = ["James Wise <jawise23@users.noreply.github.com>"]
repository = "https://github.com/jawise23/RustQuest"
readme = "README.md"
keywords = ["rust", "ci", "template"]
categories = ["development-tools", "templates"]

[dependencies]
